[gd_scene load_steps=15 format=3 uid="uid://bf5kmm2uk5t8r"]

[ext_resource type="Script" path="res://ui/skins/skins.gd" id="1_8i4rg"]
[ext_resource type="Texture2D" uid="uid://djws21bxdcpt7" path="res://world/decoration/trees/oak/oak_tree.png" id="2_lr5ln"]
[ext_resource type="Texture2D" uid="uid://ch3ynepf8eb3m" path="res://ui/credits/Sky.png" id="2_ovg6d"]
[ext_resource type="Theme" uid="uid://hft8rbf0e22b" path="res://ui/main_ui_theme.tres" id="3_sjb4j"]
[ext_resource type="Texture2D" uid="uid://brg4owq1xh3x0" path="res://ui/skins/previews/cata.png" id="4_8555x"]
[ext_resource type="StyleBox" uid="uid://dlpke1s611hjt" path="res://ui/skins/skinHover.tres" id="4_wdjg8"]
[ext_resource type="Texture2D" uid="uid://cxs671vkr5lwh" path="res://ui/skins/previews/corgi.png" id="5_h4tko"]
[ext_resource type="Texture2D" uid="uid://eshbwuufc4ue" path="res://ui/skins/previews/margarita.png" id="6_f4alk"]

[sub_resource type="LabelSettings" id="LabelSettings_3vmwn"]
font_size = 90
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xirqo"]
bg_color = Color(0.93, 0.79825, 0.6138, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.741176, 0.34902, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="LabelSettings" id="LabelSettings_ae7rh"]
font_size = 42
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.368627)
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_frirq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Skin1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(54, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Skin2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(414, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Skin3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(774, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/ChooseSkinLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(274.5, -169)]
}

[sub_resource type="Animation" id="Animation_mir5u"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Skin1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(54, 451), Vector2(54, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Skin2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(414, 451), Vector2(414, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Skin3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(774, 451), Vector2(774, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/ChooseSkinLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(274.5, -317), Vector2(274.5, -169)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nvt31"]
_data = {
"RESET": SubResource("Animation_frirq"),
"open": SubResource("Animation_mir5u")
}

[node name="Skins" type="CanvasLayer"]
script = ExtResource("1_8i4rg")

[node name="Sky" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ovg6d")
expand_mode = 1

[node name="Tree1" type="Sprite2D" parent="."]
position = Vector2(48, 849)
texture = ExtResource("2_lr5ln")

[node name="Tree2" type="Sprite2D" parent="."]
position = Vector2(1073, 798)
texture = ExtResource("2_lr5ln")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -110.0
offset_right = 564.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_sjb4j")

[node name="ChooseSkinLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.5
offset_top = -169.0
offset_right = 289.5
offset_bottom = -52.0
grow_horizontal = 2
text = "Choose Your Skin"
label_settings = SubResource("LabelSettings_3vmwn")

[node name="Skin1" type="Button" parent="Control"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
offset_left = 54.0
offset_right = 354.0
offset_bottom = 350.0
theme_override_styles/focus = ExtResource("4_wdjg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/hover = ExtResource("4_wdjg8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xirqo")

[node name="TextureRect" type="TextureRect" parent="Control/Skin1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -126.0
offset_right = 106.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8555x")
expand_mode = 1

[node name="Label" type="Label" parent="Control/Skin1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -84.0
offset_right = 75.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
text = "that one !"
label_settings = SubResource("LabelSettings_ae7rh")
horizontal_alignment = 1

[node name="Skin2" type="Button" parent="Control"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
offset_left = 414.0
offset_right = 714.0
offset_bottom = 350.0
theme_override_styles/focus = ExtResource("4_wdjg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/hover = ExtResource("4_wdjg8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xirqo")

[node name="TextureRect" type="TextureRect" parent="Control/Skin2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -126.0
offset_right = 106.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_h4tko")
expand_mode = 1

[node name="Label" type="Label" parent="Control/Skin2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -84.0
offset_right = 75.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
text = "this one !!"
label_settings = SubResource("LabelSettings_ae7rh")
horizontal_alignment = 1

[node name="Skin3" type="Button" parent="Control"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
offset_left = 774.0
offset_right = 1074.0
offset_bottom = 350.0
theme_override_styles/focus = ExtResource("4_wdjg8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/hover = ExtResource("4_wdjg8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xirqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xirqo")

[node name="TextureRect" type="TextureRect" parent="Control/Skin3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -126.0
offset_right = 106.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_f4alk")
expand_mode = 1

[node name="Label" type="Label" parent="Control/Skin3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -84.0
offset_right = 75.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
text = "ooh this one !!"
label_settings = SubResource("LabelSettings_ae7rh")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nvt31")
}
autoplay = "open"

[connection signal="pressed" from="Control/Skin1" to="." method="_skin1_pressed"]
[connection signal="pressed" from="Control/Skin2" to="." method="_skin2_pressed"]
[connection signal="pressed" from="Control/Skin3" to="." method="_skin3_pressed"]
